# myfpl

./: .gitignore  Presentation.ipynb  README.md  Snakefile  config.yaml  player_data.py  pyproject.toml  team1.txt  validate.py
notebooks/: team_performance.ipynb
scripts/: player_score_plot.py
src/myfpl/: fixtures.py  player.py  player_data.py  player_history.py  teams_list.py  validate.py
tests/: test_validate.py
